--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -3284,3 +3284,6 @@ label.N-EditProfile {
   padding: 10px 0;
   border-bottom: 1px solid #ddd;
 }
+.ForgotModal .loginContainer .title{
+  padding: 30px 0px 0px 0px;
+}
