recipe page done

--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -3527,3 +3527,9 @@ label.cover-img-upload ion-text {
   justify-content: center;
   padding: 5px;
 }
+
+.tagArea {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
