--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -3705,3 +3705,6 @@ label.cover-img-upload ion-text {
     min-height: auto;
     --overflow: visible;
 }
+.image-upload input {
+  display: none;
+}
