--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -3813,3 +3813,10 @@ label.cover-img-upload ion-text {
 .LikeIcon{
   color: #9a1504;
 }
+
+.TextGray{
+  color: #0000007a;
+}
+.TextDanger{
+  color:  #9a1504;
+}
