--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -18,9 +18,11 @@ iframe {
 }
 
 .ion-page>ion-content::part(scroll) {
-  padding-top: 80px;
+  padding-top: 0px;
 }
-
+.scroll-y{
+  z-index: 999;
+}
 /* Header */
 
 .LogoGroup {
