--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -454,20 +454,22 @@ iframe {
   gap: 10px;
 }
 
-/* .CategoryThumb {
+ /* .CategoryThumb {
   padding: 25px;
   aspect-ratio: 1;
   width: 100%;
   border-radius: 100%;
   background: #f2f2f2;
   overflow: hidden;
-} */
+}  */
 
 .CategoryThumb img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   border-radius: 50%;
+  /* max-width: 204px; */
+  height: 160px;
 }
 
 .CategoryTitle {
